--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-umi2, umi3, umi4, umi5, umi6, umi7, umi8, umi9, umi10, umi11, umi12, umi13, umi14, umi15, umi16, umi17, umi18, umi19, umi20
+umi2/
+umi3/
+umi4/
+umi5/
